--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -1,1 +1,17 @@
-<p>notes-list works!</p>
+<div class="main-container">
+
+    <div class="search-bar-container">
+        <div class="field">
+            <p class="control has-icons-left">
+                <input class="input" type="password" placeholder="Filtrer">
+                <span class="icon is-small is-left">
+                    <i class="fas fa-search"></i>
+                </span>
+            </p>
+        </div>
+    </div>
+
+    <div class="notes-list">
+        <app-note-card [title]="essai"></app-note-card> 
+    </div>
+</div>
