Update Note Card
Add Input link & EventEmitter

--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -1,5 +1,5 @@
 <div #container class="note-card-container">
-
+  <a [routerLink]="link">
     <div class="note-card-content">
       <h1 class="note-card-title">{{ title }}</h1>
       
@@ -9,8 +9,8 @@
         <div #truncator class="fade-out-truncation"></div>
       </div>
     </div>
-  
+  </a>
 
-  <div class="x-button"></div>
-  
+  <div class="x-button" (click)='onXButtonClick()'></div>
+
 </div>
