--- a/src/app/note-card/note-card.component.scss
+++ b/src/app/note-card/note-card.component.scss
@@ -8,12 +8,12 @@
 
     box-shadow: 0px 2px 15px 2px rgba(black, 0.068);
     transition: box-shadow 0.2s ease-out;
-    
+
 
     &:hover {
         cursor: pointer;
-        box-shadow: 0px 0px 0px 4px rbga(black, 0.068);
-    
+        box-shadow: 0px 0px 0px 4px rgba(black, 0.068);
+
         .x-button {
             opacity: 1;
             transform: scale(1);
@@ -21,10 +21,10 @@
             transition-delay: 0.35s;
         }
     }
-
+    
     .note-card-content {
         padding: 25px;
-
+        
         .note-card-title {
             font-size: 22px;
             font-weight: bold;
@@ -34,21 +34,23 @@
         .note-card-body {
             position: relative;
 
-            //The maximum height before it's truncated
+            color: #555;
+
+            // The maximum height before it is truncated
             max-height: 80px;
             overflow: hidden;
 
-            .fade-out-truncation {
+            /*.fade-out-truncation {
                 position: absolute;
 
                 pointer-events: none;
-
+                
                 bottom: 0;
+
                 height: 50%;
                 width: 100%;
-                background: red;
                 background: linear-gradient(to bottom, rgba(white, 0) 0%, rgba(white, 0.8) 50%, white 100%);
-            }
+            }*/
         }
     }
 }
@@ -56,11 +58,16 @@
 .x-button {
     position: absolute;
 
+    // 12px from the top
     top: 12px;
+
+    // 12px from the right side
     right: 12px;
+
     height: 34px;
     width: 34px;
-    background-color: $light;
+
+    background-color: $light-red;
     background-image: url('../../assets/delete_icon.svg');
     background-repeat: no-repeat;
     background-position: center;
@@ -69,13 +76,15 @@
 
     transition: opacity 0.2s ease-out, transform 0.2s ease-out;
 
+    // the button is hidden by default
     opacity: 0;
     transform: scale(0.35);
 
-    &:hover {
+    &:hover { 
         background-color: darken($light-red, 2%);
     }
 
+    // on click
     &:active {
         background-color: darken($light-red, 4%);
     }
