--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -24,7 +24,7 @@
 
   </div>
 
-    <button class="button floating-add-button is-primary" routerLink="new">+Add</button>
+    <button class="button floating-add-button is-primary" routerLink="new">+ Nouvelle Note</button>
 
 </div>
 
