--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <div class="layout-bar">
     <div class="top-bar">
-        <h1>Note Mate</h1>
+        <h1>Bloc-note</h1>
     </div>
     <div class="page-content">
         <router-outlet></router-outlet>
