--- a/src/app/pages/note-details/note-details.component.html
+++ b/src/app/pages/note-details/note-details.component.html
@@ -5,14 +5,14 @@
         <div class="fiel">
             <label class="label">Titre</label>
             <div class="control">
-                <input type="text" name="title" [ngModel]="note.title" class="input" required>
+                <input type="text" name="title" [ngModel]="note.title" required class="input" >
             </div>
         </div>
 
         <br>
 
         <div class="field">
-            <label class="label">Body</label>
+            <label class="label">Contenu</label>
             <div class="control">
                 <textarea class="textarea" name="body" [ngModel]="note.body"></textarea>
             </div>
