Update Filter function
Now, no need to press "Enter" to filter

--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -3,7 +3,7 @@
   <div class="search-bar-container">
     <div class="field">
       <p class="control has-icons-left">
-        <input #filterInput class="input" type="text"  placeholder="Filtre" (change)="filter($event.target.value)">
+        <input #filterInput class="input" type="text"  placeholder="Filtre" (keyup)="filter($event.target.value)">
         <span class="icon is-small is-left">
           <i class="fas fa-search"></i>
         </span>
